feat: unit test + dockeriazation
