# config/openapi.yml
@@ -15,10 +15,7 @@ externalDocs:
 servers:
 - url: /api/v1
  
-tags:
-  - name: greeting
-    description: Greeting APIs
- 
+tags: 
   - name: user
     description: User APIs
  
@@ -42,7 +39,7 @@ paths:
               properties:
                 username:
                   type: string
-                  format: '^[a-zA-Z0-9_\.\-]{1,}$'
+                  pattern: '^[a-zA-Z0-9_\.\-]{1,}$'
                 password:
                   type: string
       responses:
@@ -68,8 +65,26 @@ paths:
                   token:
                     type: string
                     format: '^[A-Za-z0-9-_=]+\.[A-Za-z0-9-_=]+\.?[A-Za-z0-9-_.+/=]*$'
-        404:
+        400:
           description: Invalid Login/Password
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+        401:
+          description: Invalid Password
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+        404:
+          description: User does not exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+        423:
+          description: User has been locked
           content:
             application/json:
               schema:
@@ -95,14 +110,14 @@ paths:
               type: object
               additionalProperties: false
               required:
-                - password
                 - username
+                - password
               properties:
-                password:
-                  type: string
                 username:
                   type: string
-                  format: '^[a-zA-Z0-9_\.\-]{1,}$'
+                  pattern: '^[a-zA-Z0-9_\.\-]{1,}$'
+                password:
+                  type: string
       responses:
         201:
           description: Success
